# graphics-engine

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  index.html  namespaces.dox  run-ci-clang.sh  run-ci-gcc.sh  run-ci-windows.ps1  run-ci.sh
.github/workflows/: ci-clang.yml  ci-gcc.yml  ci-windows.yml  ci.yml  static.yml
ci/: run-ci-clang.sh  run-ci-gcc.sh  run-ci-windows.ps1
demo-app/: CMakeLists.txt  hello-world.cc
demo-app/src/: demo-app.cc  hello-world.cc  scene-hello-triangle.cc  scene-hello-triangle.h
engine-lib/: CMakeLists.txt
engine-lib/include/graphics-engine/: dll-export.h  engine.h  gl-types.h  gl-wrappers.h  hello-triangle.h  i-gl-clear-flags.h  i-shader.h  image.h  scene.h  shader.h  triangle.h  types.h  version.h
engine-lib/src/: engine.cc  error.cc  error.h  gl-clear-flags.cc  gl-clear-flags.h  gl-wrappers.cc  hello-triangle.cc  image.cc  shader.cc  shader.h  triangle.cc  version.cc
engine-tests/: CMakeLists.txt
engine-tests/src/: engine-tests.cc  gl-clear-flags-tests.cc  gl-wrappers-tests.cc  shader-tests.cc  triangle-tests.cc  version-tests.cc
