cmake_minimum_required(VERSION 3.10)
project(graphics-engine VERSION 0.0.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(ENABLE_COVERAGE_GCC "Enable code coverage analysis for gcc" OFF)
option(BUILD_SHARED_LIBS "Build shared libraries" ON)

if(EXISTS "${CMAKE_SOURCE_DIR}/third-party/glm/CMakeLists.txt")
  message(STATUS "glm submodule found! Adding to build.")
  add_subdirectory(third-party/glm)
else()
  message(WARNING "glm submodule is missing! Run: git submodule update --init --recursive")
endif()

if(EXISTS "${CMAKE_SOURCE_DIR}/third-party/glfw/CMakeLists.txt")
  message(STATUS "glfw submodule found! Adding to build.")
  add_subdirectory(third-party/glfw)
else()
  message(WARNING "glfw submodule is missing! Run: git submodule update --init --recursive")
endif()

if(EXISTS "${CMAKE_SOURCE_DIR}/third-party/googletest/CMakeLists.txt")
    message(STATUS "googletest submodule found! Adding to build.")
    add_subdirectory(third-party/googletest)
    enable_testing()
else()
    message(WARNING "googletest submodule is missing! Run: git submodule update --init --recursive")
endif()

add_subdirectory(engine-lib)
add_subdirectory(engine-tests)
add_subdirectory(demo-app)
add_subdirectory(third-party/glad)

if (MSVC)
	set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT demo-app)
	set_target_properties(docs PROPERTIES FOLDER "third-party-libs")
	set_target_properties(glad PROPERTIES FOLDER "third-party-libs")
	set_target_properties(glfw PROPERTIES FOLDER "third-party-libs")
	set_target_properties(gmock PROPERTIES FOLDER "third-party-libs")
	set_target_properties(gmock_main PROPERTIES FOLDER "third-party-libs")
	set_target_properties(gtest PROPERTIES FOLDER "third-party-libs")
	set_target_properties(gtest_main PROPERTIES FOLDER "third-party-libs")
	set_target_properties(uninstall PROPERTIES FOLDER "third-party-libs")
	set_target_properties(update_mappings PROPERTIES FOLDER "third-party-libs")
endif()
